tests/baselines/reference/stringLiteralsWithSwitchStatements01.errors.txt
stringLiteralsWithSwitchStatements01.ts(7,10): error TS2678: Type '"bar"' is not comparable to type '"foo"'.


==== stringLiteralsWithSwitchStatements01.ts (1 errors) ====
    declare let x: "foo";
    declare let y: "foo" | "bar";
    
    switch (x) {
        case "foo":
            break;
        case "bar":
             ~~~~~
!!! error TS2678: Type '"bar"' is not comparable to type '"foo"'.
            break;
        case y:
            y;
            break;
    }
    